output/fargate-queue-processing-fargate-service-isolated/aws-ecs-patterns-queue-isolated.template.json
{
  "Resources": {
    "VPCB9E5F0B4": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC"
          }
        ]
      }
    },
    "VPCPublicSubnet1SubnetB4246D30": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/PublicSubnet1"
          }
        ]
      }
    },
    "VPCPublicSubnet1RouteTableFEE4B781": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/PublicSubnet1"
          }
        ]
      }
    },
    "VPCPublicSubnet1RouteTableAssociation0B0896DC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
        },
        "SubnetId": {
          "Ref": "VPCPublicSubnet1SubnetB4246D30"
        }
      }
    },
    "VPCPublicSubnet1DefaultRoute91CEF279": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCIGWB7E252D3"
        }
      },
      "DependsOn": [
        "VPCVPCGW99B986DC"
      ]
    },
    "VPCPublicSubnet2Subnet74179F39": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/PublicSubnet2"
          }
        ]
      }
    },
    "VPCPublicSubnet2RouteTable6F1A15F1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/PublicSubnet2"
          }
        ]
      }
    },
    "VPCPublicSubnet2RouteTableAssociation5A808732": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
        },
        "SubnetId": {
          "Ref": "VPCPublicSubnet2Subnet74179F39"
        }
      }
    },
    "VPCPublicSubnet2DefaultRouteB7481BBA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCIGWB7E252D3"
        }
      },
      "DependsOn": [
        "VPCVPCGW99B986DC"
      ]
    },
    "VPCIsolatedSubnet1SubnetEBD00FC6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.2.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/IsolatedSubnet1"
          }
        ]
      }
    },
    "VPCIsolatedSubnet1RouteTableEB156210": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/IsolatedSubnet1"
          }
        ]
      }
    },
    "VPCIsolatedSubnet1RouteTableAssociationA2D18F7C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCIsolatedSubnet1RouteTableEB156210"
        },
        "SubnetId": {
          "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6"
        }
      }
    },
    "VPCIsolatedSubnet2Subnet4B1C8CAA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.3.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/IsolatedSubnet2"
          }
        ]
      }
    },
    "VPCIsolatedSubnet2RouteTable9B4F78DC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC/IsolatedSubnet2"
          }
        ]
      }
    },
    "VPCIsolatedSubnet2RouteTableAssociation7BF8E0EB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCIsolatedSubnet2RouteTable9B4F78DC"
        },
        "SubnetId": {
          "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA"
        }
      }
    },
    "VPCIGWB7E252D3": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC"
          }
        ]
      }
    },
    "VPCVPCGW99B986DC": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "InternetGatewayId": {
          "Ref": "VPCIGWB7E252D3"
        }
      }
    },
    "VPCS3Endpoint18C9C7CA": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "RouteTableIds": [
          {
            "Ref": "VPCIsolatedSubnet1RouteTableEB156210"
          },
          {
            "Ref": "VPCIsolatedSubnet2RouteTable9B4F78DC"
          }
        ],
        "VpcEndpointType": "Gateway"
      }
    },
    "VPCSqsEndpointSecurityGroupAE06A78D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-ecs-patterns-queue-isolated/VPC/SqsEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "VPCB9E5F0B4",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "VPCB9E5F0B4",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC"
          }
        ],
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        }
      }
    },
    "VPCSqsEndpoint9A40D77F": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".sqs"
            ]
          ]
        },
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "VPCSqsEndpointSecurityGroupAE06A78D",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6"
          },
          {
            "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA"
          }
        ],
        "VpcEndpointType": "Interface"
      }
    },
    "VPCEcrEndpointSecurityGroup50ED8BA4": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-ecs-patterns-queue-isolated/VPC/EcrEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "VPCB9E5F0B4",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "VPCB9E5F0B4",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC"
          }
        ],
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        }
      }
    },
    "VPCEcrEndpointB4F98F37": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecr.api"
            ]
          ]
        },
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "VPCEcrEndpointSecurityGroup50ED8BA4",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6"
          },
          {
            "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA"
          }
        ],
        "VpcEndpointType": "Interface"
      }
    },
    "VPCEcrImageEndpointSecurityGroup83621638": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-ecs-patterns-queue-isolated/VPC/EcrImageEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "VPCB9E5F0B4",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "VPCB9E5F0B4",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC"
          }
        ],
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        }
      }
    },
    "VPCEcrImageEndpointD55381DC": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecr.dkr"
            ]
          ]
        },
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "VPCEcrImageEndpointSecurityGroup83621638",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6"
          },
          {
            "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA"
          }
        ],
        "VpcEndpointType": "Interface"
      }
    },
    "VPCCloudWatchLogsEndpointSecurityGroup967DBC94": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-ecs-patterns-queue-isolated/VPC/CloudWatchLogsEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "VPCB9E5F0B4",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "VPCB9E5F0B4",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-ecs-patterns-queue-isolated/VPC"
          }
        ],
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        }
      }
    },
    "VPCCloudWatchLogsEndpointE175AF65": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".logs"
            ]
          ]
        },
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6"
          },
          {
            "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA"
          }
        ],
        "VpcEndpointType": "Interface"
      }
    },
    "MyCustomSGDE27C661": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "aws-ecs-patterns-queue-isolated/MyCustomSG",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        }
      }
    },
    "IsolatedQueueServiceEcsProcessingDeadLetterQueue7CC1D07D": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "MessageRetentionPeriod": 1209600
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "IsolatedQueueServiceEcsProcessingQueueCCE172F1": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "IsolatedQueueServiceEcsProcessingDeadLetterQueue7CC1D07D",
              "Arn"
            ]
          },
          "maxReceiveCount": 3
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ChangeMessageVisibility",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
                "sqs:ReceiveMessage"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "IsolatedQueueServiceEcsProcessingQueueCCE172F1",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "Roles": [
          {
            "Ref": "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511"
          }
        ]
      }
    },
    "IsolatedQueueServiceQueueProcessingTaskDef0F0CE105": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "QUEUE_NAME",
                "Value": {
                  "Fn::GetAtt": [
                    "IsolatedQueueServiceEcsProcessingQueueCCE172F1",
                    "QueueName"
                  ]
                }
              }
            ],
            "Essential": true,
            "Image": {
              "Fn::Sub": "${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}:95cefedd43575452a70cdeeeceb0f1c5728fd58c9ff8e81e760c3dac33c46417"
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "IsolatedQueueServiceQueueProcessingTaskDefQueueProcessingContainerLogGroupAEB959E6"
                },
                "awslogs-stream-prefix": "IsolatedQueueService",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "QueueProcessingContainer"
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "IsolatedQueueServiceQueueProcessingTaskDefExecutionRole1D7ACC77",
            "Arn"
          ]
        },
        "Family": "awsecspatternsqueueisolatedIsolatedQueueServiceQueueProcessingTaskDef27DBAF49",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
            "Arn"
          ]
        }
      }
    },
    "IsolatedQueueServiceQueueProcessingTaskDefQueueProcessingContainerLogGroupAEB959E6": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "IsolatedQueueServiceQueueProcessingTaskDefExecutionRole1D7ACC77": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "IsolatedQueueServiceQueueProcessingTaskDefExecutionRoleDefaultPolicy5667D265": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:BatchGetImage",
                "ecr:GetDownloadUrlForLayer"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ecr:",
                    {
                      "Ref": "AWS::Region"
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":repository/",
                    {
                      "Fn::Sub": "cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}"
                    }
                  ]
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "IsolatedQueueServiceQueueProcessingTaskDefQueueProcessingContainerLogGroupAEB959E6",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "IsolatedQueueServiceQueueProcessingTaskDefExecutionRoleDefaultPolicy5667D265",
        "Roles": [
          {
            "Ref": "IsolatedQueueServiceQueueProcessingTaskDefExecutionRole1D7ACC77"
          }
        ]
      }
    },
    "IsolatedQueueServiceQueueProcessingFargateServiceE868AEE1": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsDefaultClusterMnL3mNNYNVPC9C1EC7A3"
        },
        "DeploymentConfiguration": {
          "Alarms": {
            "AlarmNames": [],
            "Enable": false,
            "Rollback": false
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "MyCustomSGDE27C661",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6"
              },
              {
                "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "IsolatedQueueServiceQueueProcessingTaskDef0F0CE105"
        }
      },
      "DependsOn": [
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
        "VPCCloudWatchLogsEndpointE175AF65",
        "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
        "VPCEcrEndpointB4F98F37",
        "VPCEcrEndpointSecurityGroup50ED8BA4",
        "VPCEcrImageEndpointD55381DC",
        "VPCEcrImageEndpointSecurityGroup83621638",
        "VPCSqsEndpoint9A40D77F",
        "VPCSqsEndpointSecurityGroupAE06A78D"
      ]
    },
    "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetB06FD17D": {
      "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
      "Properties": {
        "MaxCapacity": 2,
        "MinCapacity": 1,
        "ResourceId": {
          "Fn::Join": [
            "",
            [
              "service/",
              {
                "Ref": "EcsDefaultClusterMnL3mNNYNVPC9C1EC7A3"
              },
              "/",
              {
                "Fn::GetAtt": [
                  "IsolatedQueueServiceQueueProcessingFargateServiceE868AEE1",
                  "Name"
                ]
              }
            ]
          ]
        },
        "ScalableDimension": "ecs:service:DesiredCount",
        "ServiceNamespace": "ecs",
        "RoleARN": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":iam::",
              {
                "Ref": "AWS::AccountId"
              },
              ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
            ]
          ]
        }
      },
      "DependsOn": [
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
        "VPCCloudWatchLogsEndpointE175AF65",
        "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
        "VPCEcrEndpointB4F98F37",
        "VPCEcrEndpointSecurityGroup50ED8BA4",
        "VPCEcrImageEndpointD55381DC",
        "VPCEcrImageEndpointSecurityGroup83621638",
        "VPCSqsEndpoint9A40D77F",
        "VPCSqsEndpointSecurityGroupAE06A78D"
      ]
    },
    "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetCpuScaling2B518D9D": {
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyName": "awsecspatternsqueueisolatedIsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetCpuScaling8B2FB6C4",
        "PolicyType": "TargetTrackingScaling",
        "ScalingTargetId": {
          "Ref": "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetB06FD17D"
        },
        "TargetTrackingScalingPolicyConfiguration": {
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
          },
          "TargetValue": 50
        }
      },
      "DependsOn": [
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
        "VPCCloudWatchLogsEndpointE175AF65",
        "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
        "VPCEcrEndpointB4F98F37",
        "VPCEcrEndpointSecurityGroup50ED8BA4",
        "VPCEcrImageEndpointD55381DC",
        "VPCEcrImageEndpointSecurityGroup83621638",
        "VPCSqsEndpoint9A40D77F",
        "VPCSqsEndpointSecurityGroupAE06A78D"
      ]
    },
    "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingLowerPolicy960D4BA1": {
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyName": "awsecspatternsqueueisolatedIsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingLowerPolicy5EFC8D1B",
        "PolicyType": "StepScaling",
        "ScalingTargetId": {
          "Ref": "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetB06FD17D"
        },
        "StepScalingPolicyConfiguration": {
          "AdjustmentType": "ChangeInCapacity",
          "MetricAggregationType": "Maximum",
          "StepAdjustments": [
            {
              "MetricIntervalUpperBound": 0,
              "ScalingAdjustment": -1
            }
          ]
        }
      },
      "DependsOn": [
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
        "VPCCloudWatchLogsEndpointE175AF65",
        "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
        "VPCEcrEndpointB4F98F37",
        "VPCEcrEndpointSecurityGroup50ED8BA4",
        "VPCEcrImageEndpointD55381DC",
        "VPCEcrImageEndpointSecurityGroup83621638",
        "VPCSqsEndpoint9A40D77F",
        "VPCSqsEndpointSecurityGroupAE06A78D"
      ]
    },
    "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingLowerAlarm88D1A0F9": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "AlarmActions": [
          {
            "Ref": "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingLowerPolicy960D4BA1"
          }
        ],
        "AlarmDescription": "Lower threshold scaling alarm",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "IsolatedQueueServiceEcsProcessingQueueCCE172F1",
                "QueueName"
              ]
            }
          }
        ],
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 0
      },
      "DependsOn": [
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
        "VPCCloudWatchLogsEndpointE175AF65",
        "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
        "VPCEcrEndpointB4F98F37",
        "VPCEcrEndpointSecurityGroup50ED8BA4",
        "VPCEcrImageEndpointD55381DC",
        "VPCEcrImageEndpointSecurityGroup83621638",
        "VPCSqsEndpoint9A40D77F",
        "VPCSqsEndpointSecurityGroupAE06A78D"
      ]
    },
    "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingUpperPolicyFAB35025": {
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
      "Properties": {
        "PolicyName": "awsecspatternsqueueisolatedIsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingUpperPolicy51E582BF",
        "PolicyType": "StepScaling",
        "ScalingTargetId": {
          "Ref": "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetB06FD17D"
        },
        "StepScalingPolicyConfiguration": {
          "AdjustmentType": "ChangeInCapacity",
          "MetricAggregationType": "Maximum",
          "StepAdjustments": [
            {
              "MetricIntervalLowerBound": 0,
              "MetricIntervalUpperBound": 400,
              "ScalingAdjustment": 1
            },
            {
              "MetricIntervalLowerBound": 400,
              "ScalingAdjustment": 5
            }
          ]
        }
      },
      "DependsOn": [
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
        "VPCCloudWatchLogsEndpointE175AF65",
        "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
        "VPCEcrEndpointB4F98F37",
        "VPCEcrEndpointSecurityGroup50ED8BA4",
        "VPCEcrImageEndpointD55381DC",
        "VPCEcrImageEndpointSecurityGroup83621638",
        "VPCSqsEndpoint9A40D77F",
        "VPCSqsEndpointSecurityGroupAE06A78D"
      ]
    },
    "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingUpperAlarm351987F5": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "AlarmActions": [
          {
            "Ref": "IsolatedQueueServiceQueueProcessingFargateServiceTaskCountTargetQueueMessagesVisibleScalingUpperPolicyFAB35025"
          }
        ],
        "AlarmDescription": "Upper threshold scaling alarm",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "IsolatedQueueServiceEcsProcessingQueueCCE172F1",
                "QueueName"
              ]
            }
          }
        ],
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 100
      },
      "DependsOn": [
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleDefaultPolicyD52E156B",
        "IsolatedQueueServiceQueueProcessingTaskDefTaskRoleCFCB7511",
        "VPCCloudWatchLogsEndpointE175AF65",
        "VPCCloudWatchLogsEndpointSecurityGroup967DBC94",
        "VPCEcrEndpointB4F98F37",
        "VPCEcrEndpointSecurityGroup50ED8BA4",
        "VPCEcrImageEndpointD55381DC",
        "VPCEcrImageEndpointSecurityGroup83621638",
        "VPCSqsEndpoint9A40D77F",
        "VPCSqsEndpointSecurityGroupAE06A78D"
      ]
    },
    "EcsDefaultClusterMnL3mNNYNVPC9C1EC7A3": {
      "Type": "AWS::ECS::Cluster"
    }
  },
  "Outputs": {
    "IsolatedQueueServiceSQSDeadLetterQueue43D346B9": {
      "Value": {
        "Fn::GetAtt": [
          "IsolatedQueueServiceEcsProcessingDeadLetterQueue7CC1D07D",
          "QueueName"
        ]
      }
    },
    "IsolatedQueueServiceSQSDeadLetterQueueArnCE7C60F2": {
      "Value": {
        "Fn::GetAtt": [
          "IsolatedQueueServiceEcsProcessingDeadLetterQueue7CC1D07D",
          "Arn"
        ]
      }
    },
    "IsolatedQueueServiceSQSQueueA65E2641": {
      "Value": {
        "Fn::GetAtt": [
          "IsolatedQueueServiceEcsProcessingQueueCCE172F1",
          "QueueName"
        ]
      }
    },
    "IsolatedQueueServiceSQSQueueArn571FDB86": {
      "Value": {
        "Fn::GetAtt": [
          "IsolatedQueueServiceEcsProcessingQueueCCE172F1",
          "Arn"
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
